Updated customer profile

--- a/config/default_loader.ini
+++ b/config/default_loader.ini
@@ -19,3 +19,8 @@ schema = schemas/menu_item.avro
 topic_prefix = chatbot-restaurant-kids_menu-
 filename = rag/kids_menu.json
 schema = schemas/menu_item.avro
+
+[customer_profiles]
+topic = chatbot-restaurant-customer_profiles
+filename = rag/customer_profiles.json
+schema = schemas/customer_profile.avro
