--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -8,4 +8,5 @@ confluent-kafka==2.3.0
 python-dotenv==1.0.1
 beautifulsoup4==4.12.3
 langchain-groq==0.0.1
+langchain-openai==0.0.8
 tiktoken==0.6.0
