--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -10,3 +10,5 @@ beautifulsoup4==4.12.3
 langchain-groq==0.0.1
 langchain-openai==0.0.8
 tiktoken==0.6.0
+qdrant-client==1.8.0
+sentence-transformers==2.6.0
