--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,14 +1,15 @@
-faker==24.3.0
-flask==3.0.2
-flask-login==0.6.3
-fastavro==1.9.4
-langchain==0.1.12
-requests==2.31.0
-confluent-kafka==2.3.0
-python-dotenv==1.0.1
 beautifulsoup4==4.12.3
+confluent-kafka==2.3.0
+faker==24.3.0
+fastavro==1.9.4
+flask-login==0.6.3
+flask==3.0.2
+langchain-community==0.0.28
 langchain-groq==0.0.1
 langchain-openai==0.0.8
-tiktoken==0.6.0
+langchain==0.1.12
+python-dotenv==1.0.1
 qdrant-client==1.8.0
+requests==2.31.0
 sentence-transformers==2.6.0
+tiktoken==0.6.0
