--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "2"
-
 services:
 
   zookeeper:
@@ -57,6 +55,42 @@ services:
       SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: broker:9094
       SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
 
+  connect:
+    image: cnfldemos/cp-server-connect-datagen:$CONFLUENT_DATAGEN_VERSION-$CONFLUENT_PLATFORM_VERSION
+    ports:
+      - 8083:8083
+    environment:
+      CONNECT_BOOTSTRAP_SERVERS: broker:9094
+      CONNECT_REST_PORT: 8083
+      CONNECT_GROUP_ID: connect
+      CONNECT_CONFIG_STORAGE_TOPIC: connect-configs
+      CONNECT_OFFSET_STORAGE_TOPIC: connect-offsets
+      CONNECT_STATUS_STORAGE_TOPIC: connect-status
+      CONNECT_KEY_CONVERTER: org.apache.kafka.connect.storage.StringConverter
+      CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry:8081
+      CONNECT_VALUE_CONVERTER: io.confluent.connect.avro.AvroConverter
+      CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry:8081
+      CONNECT_REST_ADVERTISED_HOST_NAME: connect
+      CONNECT_LOG4J_ROOT_LOGLEVEL: INFO
+      CONNECT_LOG4J_LOGGERS: org.apache.kafka.connect.runtime.rest=WARN,org.reflections=ERROR
+      CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR: 1
+      CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR: 1
+      CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: 1
+      CONNECT_PLUGIN_PATH: /usr/share/java,/usr/share/confluent-hub-components
+    depends_on:
+      - zookeeper
+      - broker
+      - schema-registry
+    command: 
+      - bash 
+      - -c 
+      - |
+        echo "Installing Connectors"
+        confluent-hub install --no-prompt debezium/debezium-connector-postgresql:$CONFLUENT_POSTGRES_CDC_VERSION
+        echo "Launching Kafka Connect worker"
+        /etc/confluent/docker/run & 
+        sleep infinity
+
   control-center:
     image: confluentinc/cp-enterprise-control-center:$CONFLUENT_PLATFORM_VERSION
     hostname: control-center
@@ -65,6 +99,7 @@ services:
     depends_on:
       - broker
       - schema-registry
+      - connect
     ports:
       - 9021:9021
     environment:
@@ -74,8 +109,10 @@ services:
       CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS: 1
       CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 1
       CONFLUENT_METRICS_TOPIC_REPLICATION: 1
+      CONTROL_CENTER_CONNECT_CONNECT-CLUSTER_CLUSTER: http://connect:8083
       PORT: 9021
 
+  # Chatbot FE/BE
   chatbot:
     build: .
     hostname: chatbot
@@ -86,3 +123,33 @@ services:
       - control-center
     ports:
       - $WEBAPP_PORT:$WEBAPP_PORT
+
+  # PostgreSQL
+  postgres:
+    container_name: postgres
+    image: debezium/postgres:$POSTGRESQL_VERSION
+    platform: linux/x86_64
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=postgres
+    ports:
+      - 5432:5432
+    restart: always
+    depends_on:
+      - chatbot
+
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4:latest
+    platform: linux/x86_64
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.org
+      PGADMIN_DEFAULT_PASSWORD: admin
+    volumes:
+       - ./pgadmin:/var/lib/pgadmin
+    ports:
+      - 5050:80
+    restart: always
+    depends_on:
+      - postgres
