--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,15 +1,20 @@
 beautifulsoup4==4.12.3
-confluent-kafka==2.3.0
-faker==24.3.0
-fastavro==1.9.4
+boto3==1.34.145
+confluent-kafka==2.5.0
+faker==26.0.0
+fastavro==1.9.5
 flask-login==0.6.3
-flask==3.0.2
-langchain-community==0.0.28
-langchain-groq==0.0.1
-langchain-openai==0.0.8
-langchain==0.1.12
+flask==3.0.3
+langchain-aws==0.1.11
+langchain-community==0.2.7
+langchain-core==0.2.22
+langchain-groq==0.1.6
+langchain-openai==0.1.17
+langchain==0.2.9
 python-dotenv==1.0.1
-qdrant-client==1.8.0
-requests==2.31.0
-sentence-transformers==2.6.0
-tiktoken==0.6.0
+qdrant-client==1.10.1
+requests==2.32.3
+sentence-transformers==3.0.1
+tiktoken==0.7.0
+psycopg2-binary==2.9.9
+passlib==1.7.4
