--- a/src/config/localhost.ini
+++ b/src/config/localhost.ini
@@ -1,5 +1,5 @@
 [kafka]
-bootstrap.servers = broker:9094
+bootstrap.servers = localhost:9092
 
 [schema-registry]
-url = http://schema-registry:8081
+url = http://localhost:8081
