Split VectorDB microservice from the chatbot

--- a/.env_example
+++ b/.env_example
@@ -9,12 +9,14 @@ KAFKA_CONFIG="config/docker_host.ini"
 # DB Provisioning
 FLAG_FILE=".db_provisioning.flag"
 MD5_PASSWORD_SALT="<MD5_string_here>"               # String to be used to salt hash passwords
-CLIENT_DB_PROVISIONING="chatbot-db_provisioning-producer"
+CLIENT_DB_PROVISIONING="chatbot-db_provisioning"
 # Web App (Chatbot front-end)
 WEBAPP_HOST="0.0.0.0"
 WEBAPP_PORT=8888
 CLIENT_ID_WEBAPP="chatbot-webapp"
 TIMEOUT_SECONDS=120
+# Consumer to VectorDB
+CLIENT_ID_VDB="vdb-app"
 # Chatbot back-end
 CLIENT_ID_CHATBOT="chatbot-app"
 LLM_ENGINE="openai"                             # Options: openai (paid), groq (free), bedrock (AWS: paid)
