REST API for embeddings

--- a/.env_example
+++ b/.env_example
@@ -10,6 +10,11 @@ KAFKA_CONFIG="config/docker_host.ini"
 FLAG_FILE=".db_provisioning.flag"
 MD5_PASSWORD_SALT="<MD5_string_here>"               # String to be used to salt hash passwords
 CLIENT_DB_PROVISIONING="chatbot-db_provisioning"
+# Embedding REST API
+EMBEDDING_HOST="0.0.0.0"
+EMBEDDING_PORT=9999
+EMBEDDING_PATH="/api/v1/embedding/setence-transformer"
+CLIENT_ID_EMBEDDING="chatbot-embeddings"
 # Web App (Chatbot front-end)
 WEBAPP_HOST="0.0.0.0"
 WEBAPP_PORT=8888
