UDF::GENERATE_EMBEDDING attempt (still broken)

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,20 @@ __pycache__/
 .db_provisioning.flag
 src/.db_provisioning.flag
 pgadmin/*
+
+maven-archiver/
+classes/
+generated-sources/
+generated-test-sources/
+maven-status/
+test-classes/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+.idea/
