--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,7 +106,7 @@ services:
       CONTROL_CENTER_BOOTSTRAP_SERVERS: broker:9094
       CONTROL_CENTER_KSQL_KSQLDB1_URL: http://ksqldb-server:8088
       CONTROL_CENTER_SCHEMA_REGISTRY_URL: http://schema-registry:8081
-      CONTROL_CENTER_KSQL_KSQLDB1_ADVERTISED_URL: http://localhost:8088
+      CONTROL_CENTER_KSQL_KSQLDB1_ADVERTISED_URL: http://ksqldb-server:8088
       CONTROL_CENTER_CONNECT_CONNECT-CLUSTER_CLUSTER: http://connect:8083
       CONTROL_CENTER_REPLICATION_FACTOR: 1
       CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS: 1
@@ -120,9 +120,11 @@ services:
     container_name: ksqldb-server
     depends_on:
       - broker
+      - chatbot
     ports:
       - 8088:8088
     environment:
+      KSQL_KSQL_SERVICE_ID: ksqldb1
       KSQL_CONFIG_DIR: /etc/ksqldb
       KSQL_BOOTSTRAP_SERVERS: broker:9094
       KSQL_HOST_NAME: ksqldb-server
