--- a/src/ksql-udf/pom.xml
+++ b/src/ksql-udf/pom.xml
@@ -4,21 +4,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>com.example.ksql</groupId>
     <artifactId>embeddings-udf</artifactId>
-    <version>1.0</version>
+    <version>1.0.0</version>
 
-	<name>KSQL UDF / UDAF </name>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<ksql.version>5.4.0</ksql.version>
-		<junit.jupiter.version>5.4.1</junit.jupiter.version>
-		<maven.shade.version>3.2.1</maven.shade.version>
-		<apache.commons.version>3.9</apache.commons.version>
-		<!-- JUnit 5 requires Surefire version 2.22.1 or higher -->
-		<maven.surefire.version>2.22.1</maven.surefire.version>
-	</properties>
+    <properties>
+        <java.version>8</java.version>
+        <ksqldb.version>7.6.0</ksqldb.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
 
     <!-- Specify the repository for Confluent dependencies -->
     <repositories>
@@ -50,56 +46,23 @@
             <version>4.5.13</version>
         </dependency>
 
-		<!-- Test dependencies -->
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter</artifactId>
-			<version>${junit.jupiter.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>${apache.commons.version}</version>
-		</dependency>
-
     </dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>${maven.shade.version}</version>
-                <executions>
-                    <execution>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>shade</goal>
-                    </goals>
-                    <configuration>
-                        <filters>
-                        <filter>
-                            <!-- Exclude signature files -->
-                            <artifact>*:*</artifact>
-                            <excludes>
-                            <exclude>META-INF/*.SF</exclude>
-                            <exclude>META-INF/*.DSA</exclude>
-                            <exclude>META-INF/*.RSA</exclude>
-                            </excludes>
-                        </filter>
-                        </filters>
-                    </configuration>
-                    </execution>
-                </executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${maven.surefire.version}</version>
-			</plugin>
-		</plugins>
-	</build>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <compilerArgs>
+                        <arg>-Xlint:all</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
