--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,7 +106,7 @@ services:
       CONTROL_CENTER_BOOTSTRAP_SERVERS: broker:9094
       CONTROL_CENTER_KSQL_KSQLDB1_URL: http://ksqldb-server:8088
       CONTROL_CENTER_SCHEMA_REGISTRY_URL: http://schema-registry:8081
-      CONTROL_CENTER_KSQL_KSQLDB1_ADVERTISED_URL: http://ksqldb-server:8088
+      CONTROL_CENTER_KSQL_KSQLDB1_ADVERTISED_URL: http://localhost:8088
       CONTROL_CENTER_CONNECT_CONNECT-CLUSTER_CLUSTER: http://connect:8083
       CONTROL_CENTER_REPLICATION_FACTOR: 1
       CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS: 1
@@ -124,8 +124,7 @@ services:
     ports:
       - 8088:8088
     environment:
-      KSQL_KSQL_SERVICE_ID: ksqldb1
-      KSQL_CONFIG_DIR: /etc/ksqldb
+      KSQL_CONFIG_DIR: /etc/ksql
       KSQL_BOOTSTRAP_SERVERS: broker:9094
       KSQL_HOST_NAME: ksqldb-server
       KSQL_LISTENERS: http://0.0.0.0:8088
@@ -135,17 +134,18 @@ services:
       KSQL_CONSUMER_INTERCEPTOR_CLASSES: io.confluent.monitoring.clients.interceptor.MonitoringConsumerInterceptor
       KSQL_KSQL_CONNECT_URL: http://connect:8083
       KSQL_KSQL_LOGGING_PROCESSING_TOPIC_REPLICATION_FACTOR: 1
-      KSQL_KSQL_LOGGING_PROCESSING_TOPIC_AUTO_CREATE: "true"
-      KSQL_KSQL_LOGGING_PROCESSING_STREAM_AUTO_CREATE: "true"
+      KSQL_KSQL_LOGGING_PROCESSING_TOPIC_AUTO_CREATE: 'true'
+      KSQL_KSQL_LOGGING_PROCESSING_STREAM_AUTO_CREATE: 'true'
       KSQL_KSQL_EXTENSION_DIR: /etc/ksqldb/ext
     volumes:
-      - ./src/ksql-udf/target:/etc/ksqldb/ext
+      - ./src/udf/target:/etc/ksqldb/ext
 
   ksqldb-cli:
-    image: confluentinc/cp-ksqldb-cli:7.6.0
+    image: confluentinc/cp-ksqldb-cli:$CONFLUENT_PLATFORM_VERSION
     container_name: ksqldb-cli
     depends_on:
       - broker
+      - connect
       - ksqldb-server
     entrypoint: /bin/sh
     tty: true
