--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,11 @@
 *.pyc
 __pycache__/
 .env
-.db_provisioning.flag
-src/.db_provisioning.flag
+.startup.flag
+src/.startup.flag
 pgadmin/*
 
+test*.py
 test/
 maven-archiver/
 archive-tmp/
